# SmileEngine

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
Editor/: CMakeLists.txt
Editor/Include/SmileEditor/: AboutDialog.h  ConsoleWidget.h  DarkTheme.h  EnvironmentPanel.h  MainWindow.h  MaterialEditorPanel.h  TextureSlotWidget.h  ViewportWidget.h
Editor/Shaders/: console.vert
Editor/Source/: AboutDialog.cpp  ConsoleWidget.cpp  DarkTheme.cpp  EnvironmentPanel.cpp  MainWindow.cpp  MaterialEditorPanel.cpp  TextureSlotWidget.cpp  ViewportWidget.cpp  main.cpp
Editor/Styles/: AboutDialog.qss  MainWindow.qss  MaterialEditorPanel.qss  TextureSlotWidget.qss  global.qss
Engine/: CMakeLists.txt
Engine/Include/Smile/Core/: HResultCheck.h  Logger.h  Types.h  VersionInfo.h.in
Engine/Include/Smile/Graphics/: Camera.h  CommandQueue.h  ComputePipeline.h  CubeTexture.h  D3D12Device.h  DescriptorHeap.h  HDREnvironment.h  Material.h  Mesh.h  PipelineState.h  Renderer.h  Skybox.h  SwapChain.h  Texture.h  TextureSRVHeap.h
Engine/Include/Smile/Input/: CameraInput.h
Engine/Include/Smile/Math/: Mat44.h  Math.h  MathUtils.h  Vec2.h  Vec3.h  Vec4.h
Engine/Source/Core/: Logger.cpp
Engine/Source/Graphics/: Camera.cpp  CommandQueue.cpp  ComputePipeline.cpp  CubeTexture.cpp  D3D12Device.cpp  DescriptorHeap.cpp  HDREnvironment.cpp  Material.cpp  Mesh.cpp  PipelineState.cpp  Renderer.cpp  Skybox.cpp  SwapChain.cpp  Texture.cpp  TextureSRVHeap.cpp
Shaders/: CMakeLists.txt  Skybox.ps.hlsl  Skybox.vs.hlsl  Triangle.ps.hlsl  Triangle.vs.hlsl
Shaders/IBL/: BRDFIntegration.cs.hlsl  Common.hlsli  EquirectToCube.cs.hlsl  IrradianceConvolution.cs.hlsl  MipGen.cs.hlsl  SpecularPrefilter.cs.hlsl
Shaders/Includes/: ParallaxOcclusionMapping.hlsl
cmake/: CompileShaders.cmake
